# ctx-cli-skill

./: .gitignore  README.md  SKILL.md  package-lock.json  package.json  pyproject.toml
contexthub/: app.py  cli.py  config.py  schemas.py  server.py  service.py  uri.py
docs/: agent-setup.md
references/: configuration.md
scripts/: contexthub-serve  ctx_cli
src/: cli.ts  config.ts  runtime.ts
